--- a/AnotherDuplicatelol/src/namesayer/playlistScreen.fxml
+++ b/AnotherDuplicatelol/src/namesayer/playlistScreen.fxml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -15,9 +11,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="900.0" style="-fx-border-image-width: 10;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.PlaylistController">
+<AnchorPane prefHeight="600.0" prefWidth="900.0" style="-fx-border-image-width: 10;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.PlaylistController">
    <children>
-      <Button fx:id="practiceButton" layoutX="590.0" layoutY="126.0" mnemonicParsing="false" onAction="#practiceButtonClicked" prefHeight="46.0" prefWidth="127.0" text="New practice">
+      <Button fx:id="practiceButton" layoutX="590.0" layoutY="126.0" mnemonicParsing="false" onAction="#practiceButtonClicked" prefHeight="46.0" prefWidth="127.0" text="New Playlist">
          <font>
             <Font size="16.0" />
          </font>
@@ -41,128 +37,140 @@
             <Font name="System Bold" size="40.0" />
          </font>
       </Label>
-      <Pane layoutY="170.0" prefHeight="430.0" prefWidth="900.0">
-         <children>
-            <HBox prefHeight="430.0" prefWidth="900.0">
-               <children>
-                  <VBox prefHeight="430.0" prefWidth="250.0">
-                     <children>
-                        <StackPane prefHeight="170.0" prefWidth="250.0">
-                           <children>
-                              <Button fx:id="playlist1" mnemonicParsing="false" onAction="#playlistClicked" prefHeight="170.0" prefWidth="250.0">
-                                 <font>
-                                    <Font size="16.0" />
-                                 </font>
-                                 <StackPane.margin>
-                                    <Insets />
-                                 </StackPane.margin>
-                              </Button>
-                              <Button fx:id="delete1" mnemonicParsing="false" onAction="#deleteButtonClicked" prefHeight="20.0" prefWidth="20.0" text="X" StackPane.alignment="TOP_LEFT">
-                                 <StackPane.margin>
-                                    <Insets />
-                                 </StackPane.margin>
-                              </Button>
-                           </children>
-                           <VBox.margin>
-                              <Insets top="30.0" />
-                           </VBox.margin>
-                        </StackPane>
-                        <StackPane prefHeight="170.0" prefWidth="250.0">
-                           <children>
-                              <Button fx:id="playlist4" mnemonicParsing="false" onAction="#playlistClicked" prefHeight="170.0" prefWidth="250.0" />
-                              <Button fx:id="delete4" mnemonicParsing="false" onAction="#deleteButtonClicked" prefHeight="20.0" prefWidth="20.0" text="X" StackPane.alignment="TOP_LEFT">
-                                 <StackPane.margin>
-                                    <Insets />
-                                 </StackPane.margin>
-                              </Button>
-                           </children>
-                           <VBox.margin>
-                              <Insets top="30.0" />
-                           </VBox.margin>
-                        </StackPane>
-                     </children>
-                     <HBox.margin>
-                        <Insets left="50.0" />
-                     </HBox.margin>
-                  </VBox>
-                  <VBox prefHeight="430.0" prefWidth="250.0">
-                     <children>
-                        <StackPane prefHeight="170.0" prefWidth="250.0">
-                           <children>
-                              <Button fx:id="playlist2" mnemonicParsing="false" onAction="#playlistClicked" prefHeight="170.0" prefWidth="250.0">
-                                 <font>
-                                    <Font size="16.0" />
-                                 </font>
-                              </Button>
-                              <Button fx:id="delete2" mnemonicParsing="false" onAction="#deleteButtonClicked" prefHeight="20.0" prefWidth="20.0" text="X" StackPane.alignment="TOP_LEFT">
-                                 <StackPane.margin>
-                                    <Insets />
-                                 </StackPane.margin>
-                              </Button>
-                           </children>
-                           <VBox.margin>
-                              <Insets top="30.0" />
-                           </VBox.margin>
-                        </StackPane>
-                        <StackPane prefHeight="170.0" prefWidth="250.0">
-                           <children>
-                              <Button fx:id="playlist5" mnemonicParsing="false" onAction="#playlistClicked" prefHeight="170.0" prefWidth="250.0" />
-                              <Button fx:id="delete5" mnemonicParsing="false" onAction="#deleteButtonClicked" prefHeight="20.0" prefWidth="20.0" text="X" StackPane.alignment="TOP_LEFT">
-                                 <StackPane.margin>
-                                    <Insets />
-                                 </StackPane.margin>
-                              </Button>
-                           </children>
-                           <VBox.margin>
-                              <Insets top="30.0" />
-                           </VBox.margin>
-                        </StackPane>
-                     </children>
-                     <HBox.margin>
-                        <Insets left="25.0" />
-                     </HBox.margin>
-                  </VBox>
-                  <VBox prefHeight="430.0" prefWidth="250.0">
-                     <children>
-                        <StackPane prefHeight="170.0" prefWidth="250.0">
-                           <children>
-                              <Button fx:id="playlist3" mnemonicParsing="false" onAction="#playlistClicked" prefHeight="170.0" prefWidth="250.0" />
-                              <Button fx:id="delete3" mnemonicParsing="false" onAction="#deleteButtonClicked" prefHeight="20.0" prefWidth="20.0" text="X" StackPane.alignment="TOP_LEFT">
-                                 <StackPane.margin>
-                                    <Insets />
-                                 </StackPane.margin>
-                              </Button>
-                           </children>
-                           <VBox.margin>
-                              <Insets top="30.0" />
-                           </VBox.margin>
-                        </StackPane>
-                        <StackPane prefHeight="170.0" prefWidth="250.0">
-                           <children>
-                              <Button fx:id="playlist6" mnemonicParsing="false" onAction="#playlistClicked" prefHeight="170.0" prefWidth="250.0" />
-                              <Button fx:id="delete6" mnemonicParsing="false" onAction="#deleteButtonClicked" prefHeight="20.0" prefWidth="20.0" text="X" StackPane.alignment="TOP_LEFT">
-                                 <StackPane.margin>
-                                    <Insets />
-                                 </StackPane.margin>
-                              </Button>
-                           </children>
-                           <VBox.margin>
-                              <Insets top="30.0" />
-                           </VBox.margin>
-                        </StackPane>
-                     </children>
-                     <HBox.margin>
-                        <Insets left="25.0" />
-                     </HBox.margin>
-                  </VBox>
-               </children>
-            </HBox>
-         </children>
-      </Pane>
       <CheckBox fx:id="randomiseBox" layoutX="251.0" layoutY="146.0" mnemonicParsing="false" text="Randomise Order">
          <font>
             <Font size="16.0" />
          </font>
       </CheckBox>
+      <StackPane alignment="TOP_CENTER" layoutY="167.0" prefHeight="421.0" prefWidth="892.0">
+         <children>
+            <Label fx:id="noPlaylistText" text="You currently have no playlists. Click 'New Playlist' to create a new playlist">
+               <font>
+                  <Font size="16.0" />
+               </font>
+               <StackPane.margin>
+                  <Insets top="130.0" />
+               </StackPane.margin>
+            </Label>
+            <Pane prefHeight="351.0" prefWidth="422.0">
+               <children>
+                  <HBox prefHeight="430.0" prefWidth="900.0">
+                     <children>
+                        <VBox prefHeight="430.0" prefWidth="250.0">
+                           <children>
+                              <StackPane prefHeight="170.0" prefWidth="250.0">
+                                 <children>
+                                    <Button fx:id="playlist1" mnemonicParsing="false" onAction="#playlistClicked" prefHeight="170.0" prefWidth="250.0">
+                                       <font>
+                                          <Font size="16.0" />
+                                       </font>
+                                       <StackPane.margin>
+                                          <Insets />
+                                       </StackPane.margin>
+                                    </Button>
+                                    <Button fx:id="delete1" mnemonicParsing="false" onAction="#deleteButtonClicked" prefHeight="20.0" prefWidth="20.0" text="X" StackPane.alignment="TOP_LEFT">
+                                       <StackPane.margin>
+                                          <Insets />
+                                       </StackPane.margin>
+                                    </Button>
+                                 </children>
+                                 <VBox.margin>
+                                    <Insets top="30.0" />
+                                 </VBox.margin>
+                              </StackPane>
+                              <StackPane prefHeight="170.0" prefWidth="250.0">
+                                 <children>
+                                    <Button fx:id="playlist4" mnemonicParsing="false" onAction="#playlistClicked" prefHeight="170.0" prefWidth="250.0" />
+                                    <Button fx:id="delete4" mnemonicParsing="false" onAction="#deleteButtonClicked" prefHeight="20.0" prefWidth="20.0" text="X" StackPane.alignment="TOP_LEFT">
+                                       <StackPane.margin>
+                                          <Insets />
+                                       </StackPane.margin>
+                                    </Button>
+                                 </children>
+                                 <VBox.margin>
+                                    <Insets top="30.0" />
+                                 </VBox.margin>
+                              </StackPane>
+                           </children>
+                           <HBox.margin>
+                              <Insets left="50.0" />
+                           </HBox.margin>
+                        </VBox>
+                        <VBox prefHeight="430.0" prefWidth="250.0">
+                           <children>
+                              <StackPane prefHeight="170.0" prefWidth="250.0">
+                                 <children>
+                                    <Button fx:id="playlist2" mnemonicParsing="false" onAction="#playlistClicked" prefHeight="170.0" prefWidth="250.0">
+                                       <font>
+                                          <Font size="16.0" />
+                                       </font>
+                                    </Button>
+                                    <Button fx:id="delete2" mnemonicParsing="false" onAction="#deleteButtonClicked" prefHeight="20.0" prefWidth="20.0" text="X" StackPane.alignment="TOP_LEFT">
+                                       <StackPane.margin>
+                                          <Insets />
+                                       </StackPane.margin>
+                                    </Button>
+                                 </children>
+                                 <VBox.margin>
+                                    <Insets top="30.0" />
+                                 </VBox.margin>
+                              </StackPane>
+                              <StackPane prefHeight="170.0" prefWidth="250.0">
+                                 <children>
+                                    <Button fx:id="playlist5" mnemonicParsing="false" onAction="#playlistClicked" prefHeight="170.0" prefWidth="250.0" />
+                                    <Button fx:id="delete5" mnemonicParsing="false" onAction="#deleteButtonClicked" prefHeight="20.0" prefWidth="20.0" text="X" StackPane.alignment="TOP_LEFT">
+                                       <StackPane.margin>
+                                          <Insets />
+                                       </StackPane.margin>
+                                    </Button>
+                                 </children>
+                                 <VBox.margin>
+                                    <Insets top="30.0" />
+                                 </VBox.margin>
+                              </StackPane>
+                           </children>
+                           <HBox.margin>
+                              <Insets left="25.0" />
+                           </HBox.margin>
+                        </VBox>
+                        <VBox prefHeight="430.0" prefWidth="250.0">
+                           <children>
+                              <StackPane prefHeight="170.0" prefWidth="250.0">
+                                 <children>
+                                    <Button fx:id="playlist3" mnemonicParsing="false" onAction="#playlistClicked" prefHeight="170.0" prefWidth="250.0" />
+                                    <Button fx:id="delete3" mnemonicParsing="false" onAction="#deleteButtonClicked" prefHeight="20.0" prefWidth="20.0" text="X" StackPane.alignment="TOP_LEFT">
+                                       <StackPane.margin>
+                                          <Insets />
+                                       </StackPane.margin>
+                                    </Button>
+                                 </children>
+                                 <VBox.margin>
+                                    <Insets top="30.0" />
+                                 </VBox.margin>
+                              </StackPane>
+                              <StackPane prefHeight="170.0" prefWidth="250.0">
+                                 <children>
+                                    <Button fx:id="playlist6" mnemonicParsing="false" onAction="#playlistClicked" prefHeight="170.0" prefWidth="250.0" />
+                                    <Button fx:id="delete6" mnemonicParsing="false" onAction="#deleteButtonClicked" prefHeight="20.0" prefWidth="20.0" text="X" StackPane.alignment="TOP_LEFT">
+                                       <StackPane.margin>
+                                          <Insets />
+                                       </StackPane.margin>
+                                    </Button>
+                                 </children>
+                                 <VBox.margin>
+                                    <Insets top="30.0" />
+                                 </VBox.margin>
+                              </StackPane>
+                           </children>
+                           <HBox.margin>
+                              <Insets left="25.0" />
+                           </HBox.margin>
+                        </VBox>
+                     </children>
+                  </HBox>
+               </children>
+            </Pane>
+         </children>
+      </StackPane>
    </children>
 </AnchorPane>
